--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,61 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 80px; "  >
+  <div class = " d-flex justify-content-center align-items-center border rounder-5  bg-white shadow flex-column", style = "padding: 50px 100px 50px 100px;">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "users/shared/error_messages", resource: resource %>
+    
+      <div class = "field form-group mt-4 d-flex justify-content-center align-items-center">
+        <%= f.text_field :first_name, placeholder: "First Name" %>
+      </div>
+    
+      <div class = "field form-group mt-4 d-flex justify-content-center align-items-center">
+        <%= f.text_field :last_name, placeholder: "Last Name" %>
+      </div>
+    
+      <div class="field mt-4 d-flex justify-content-center align-items-center">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
+      </div>
+    
+      <div class = "mt-4 d-flex justify-content-center gap-3">
+        <%= f.collection_check_boxes :role_ids, Role.where.not(role_name: "Admin"), :id, :role_name do |box| %>
+          <span>
+            <%= box.check_box %>
+            <%= box.label %>
+          </span>
+        <% end%>
+      </div>
+    
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+    
+      <div class = "field mt-4 d-flex justify-content-center align-items-center flex-column">
+        <i>(leave blank if you don't want to change it)</i>
+        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password" %>
+        <% if @minimum_password_length %>
+          <em class = "mt-2"><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+    
+      <div class = "field d-flex justify-content-center align-items-center">
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "confirm password" %>
+      </div>
+    
+      <div class = "field mt-4 d-flex justify-content-center align-items-center flex-column">
+        <i>(we need your current password to confirm your changes)</i>
+        <%= f.password_field :current_password, autocomplete: "current-password", placeholder: "current password" %>
+      </div>
+    
+      <div class = "actions mt-4 d-flex justify-content-center align-items-center ">
+        <%= f.submit "Update", class: "btn btn-success" %>
+      </div>
     <% end %>
+    <div class = "fw-medium mt-4 d-flex justify-content-center align-items-center flex-column" >Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn btn-danger", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+    
+    <%= link_to "Back", :back, class: "mt-3 btn btn-secondary" %>
+    
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
