--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,26 @@
-<div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 150px;" >
-	<div class = "d-flex justify-content-center align-items-center border rounder-5 bg-white shadow  box-area flex-column", style = "padding: 80px">
-
+<div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 100px; "  >
+  <div class = " d-flex justify-content-center align-items-center border rounder-5  bg-white shadow  box-area inside_container flex-column", style = "padding: 50px 200px 50px 200px;">
     <h2 class = "text-center">Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class = "field form-group m-3">
+      <div class = "field form-group mt-4">
+        <%= f.label :first_name %><br />
+        <%= f.text_field :first_name %>
+      </div>
+
+      <div class = "field form-group mt-4">
+        <%= f.label :last_name %><br />
+        <%= f.text_field :last_name %>
+      </div>
+
+      <div class = "field form-group mt-4">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
-      <div class = "field form-group m-3">
+      <div class = "field form-group mt-4">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -19,17 +28,28 @@
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
-      <div class = "field form-group m-3">
+      <div class = "field form-group mt-4">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
 
-      <div class = "actions">
-        <%= f.submit "Sign up", class: "btn btn-success mt-3", style: "margin-left: 105px;" %>
+      <div class = "mt-4 d-flex justify-content-between">
+        <%= f.collection_check_boxes :role_ids, Role.where.not(role_name: "Admin"), :id, :role_name do |box| %>
+          <span>
+            <%= box.check_box %>
+            <%= box.label %>
+          </span>
+        <% end%>
+      </div>
+      <div class = "actions d-flex justify-content-center align-items-center mt-4">
+        <%= f.submit "Sign up", class: "btn btn-success" %>
       </div>
     <% end %>
 
-    <%= render "devise/shared/links" %>
+    <div class = "mt-4">
+      <%= render "devise/shared/links" %>
+    </div>
+
 
   </div>
 </div>
