--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,35 +20,31 @@
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
-      <div class = "field form-group m-3">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-
-      <div class = "field form-group m-3">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-
-      <div class = "check_box_div">
+      <div class="check_box_div d-flex justify-content-center align-items-center justify-content-evenly">
         <% @roles.each do |role| %>
           <% if role.role_name == "Admin" %>
-            <% next%>
+            <% next %>
           <% else %>
-            <%= f.check_box :roles, { multiple: true, checked: @user.roles.map{|rol| rol.id}.include?(role.id)} , role.id, nil %>
-            <%= role.role_name %>
+            <%= f.check_box :roles, { multiple: true, checked: @user.roles.map { |rol| rol.id }.include?(role.id) }, role.id, nil %>
+            <%= f.label :roles, role.role_name %>
           <% end %>
         <% end %>
       </div>
 
-      <div class = "actions">
-        <%= f.submit "Update", class: "btn btn-success mt-3", style: "margin-left: 105px;" %>
+
+      <% if current_user.admin? %>
+        <div class = "d-flex justify-content-center align-items-center mt-4">
+          <%= f.select :status, options_for_select(User.statuses.map {|status, value| [status.to_s.humanize, status.to_s]}, @user.status) %>
+        </div>
+      <% end %>
+
+      <div class = "actions d-flex justify-content-center align-items-center justify-content-evenly">
+        <%= f.submit "Update", class: "btn btn-success mt-3" %>
+        <%= link_to "Back", :back, class: "mt-3 btn btn-secondary" %>
       </div>
     <% end %>
 
+    <div class = "fw-medium mt-4 d-flex justify-content-center align-items-center flex-column" >Unhappy? <%= button_to "Cancel my account", root_path(current_user), class: "btn btn-danger", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
   </div>
 </div>
