--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,7 @@
             <th class = "p-3" >Last Name</th>
             <th class = "p-3" >Email</th>
             <th class = "p-3" >Roles</th>
+            <th class = "p-3" >Status</th>
             <th class = "p-3" colspan = "3">Actions</th>
           </tr>
         </thead>
@@ -25,6 +26,7 @@
                   <%= role.role_name%>
                 <% end%>
               </td>
+              <td class = "p-3"><%= user.status %></td>
               <td class = "p-3">
                 <%= link_to user_path(user), class: "icon-link icon-link-hover btn btn-outline-dark", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do%>
                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
@@ -34,7 +36,7 @@
                 <% end %>
               </td>
               <td class = "p-3">
-                <%= link_to edit_user_registration_path(current_user), class: "icon-link icon-link-hover btn btn-outline-info", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do %>
+                <%= link_to edit_user_path(user), class: "icon-link icon-link-hover btn btn-outline-info", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do %>
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                     <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
                   </svg>
