--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,19 +1,19 @@
 <div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 150px; " >
 	<div class = "row d-flex justify-content-center align-items-center border rounder-5 p-5 bg-white shadow  box-area inside_container">
-		<p class="h2 text-center">Create Role</p>
-		<%= form_for @role do |f| %>
+		<p class="h2 text-center">Update Category</p>
+		<%= form_for @category do |f| %>
 			<div class = "form-group m-3">
-				<%= f.label :role_name %>
-				<%= f.text_field :role_name ,class: "form-control my-3" %>
+				<%= f.label :name %>
+				<%= f.text_field :name ,class: "form-control my-3" %>
 			</div>
 
       <div class = "form-group m-3">
         <%= f.label :description %>
         <%= f.text_field :description, class: "form-control my-3" %>
       </div>
-
-			<div class = "ms-5 d-flex justify-content-center">
-				<%= f.submit 'Create Role', class: 'btn btn-primary mt-3 me-5 ' %>
+		  
+      <div class = "ms-5 d-flex justify-content-center">
+				<%= f.submit 'Update Category', class: 'btn btn-primary mt-3 me-5 ' %>
 			</div>
 		<% end %>
 
