--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,21 +1,23 @@
 <div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 150px; " >
-  <div class = "d-flex justify-content-center align-items-center border rounder-5 p-5 bg-white shadow ">
+  <div class = "d-flex justify-content-center align-items-center border rounder-5 p-5 bg-white shadow flex-column ">
     <h2>Forgot your password?</h2>
 
     <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "users/shared/error_messages", resource: resource %>
+      <%= render "devise/shared/error_messages", resource: resource %>
     
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class = "form-field mt-4 d-flex justify-content-center align-items-center flex-column">
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
       </div>
     
-      <div class="actions">
+      <div class="actions mt-4">
         <%= f.submit "Send me reset password instructions" %>
       </div>
     <% end %>
+
+    <div class = "mt-4">
+      <%= render "devise/shared/links" %>
+    </div>
     
-    <%= render "users/shared/links" %>
   </div>
 </div>
     
