--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,13 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation" data-turbo-cache="false">
-    <h2>
-      <%= I18n.t("errors.messages.not_saved",
-                 count: resource.errors.count,
-                 resource: resource.class.model_name.human.downcase)
-       %>
-    </h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+  <div id="flash" class="flash w-100 d-flex justify-content-center">
+    <div class="alert alert-warning rounded-4 text-center position-absolute z-3 m-auto", style = "top: 80px;">
+      <div id="error_explanation" data-turbo-cache="false">
+          <% resource.errors.full_messages.each do |message| %>
+            <%= message %>
+          <% end %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+          </button>   
+      </div>
+    </div>
   </div>
 <% end %>
