--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -16,17 +16,10 @@
       </div>
     </div>
 
-    <% if !user_signed_in? %>
-       <div class = "new fs-5 mt-5 ms-5">
-        <span>New Here? Then Create One</span>
-        <%= link_to 'Register', new_user_registration_path, class: "btn btn-success ms-5" %>
-      </div>
+    <div class = "new fs-5 mt-5 ms-5">
+      <%= link_to 'Explore', new_user_registration_path, class: "btn btn-success ms-5" %>
+    </div>
 
-      <div class = "log fs-5 ms-5">
-        <span>Already Registered</span>
-        <%= link_to 'Log In', new_user_session_path, class: "btn btn-success ms-5" %>
-      </div>
-    <% end %>
 
   </div>
 <div>
