sub-categories done and changes in code as advised by mam

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,6 +9,7 @@
 					<tr>
 						<th class = "p-3" >Category Name</th>
 						<th class = "p-3" >Description</th>
+						<th class = "p-3" >Main Category</th>
 						<th class = "p-3" colspan = "3">Actions</th>
 					</tr>
 				</thead>
