--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -17,7 +17,7 @@
     </div>
 
     <div class = "new fs-5 mt-5 ms-5">
-      <%= link_to 'Explore', new_user_registration_path, class: "btn btn-success ms-5" %>
+      <%= link_to 'Explore', menu_path, class: "btn btn-success ms-5" %>
     </div>
 
 
