--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -12,6 +12,12 @@
         <%= f.text_field :description, class: "form-control my-3" %>
       </div>
 
+
+      <div class = "form-group m-3">
+				<p>If it is a subcategory then mention its parent Category</p>
+				<%= f.select :parent_id, @parent_categories.map { |category, value| [category.name, category.id] }, { class: 'form-control' }  %>
+			</div>
+
 			<div class = "ms-5 d-flex justify-content-center">
 				<%= f.submit 'Create Category', class: 'btn btn-primary mt-3 me-5 ' %>
 			</div>
