--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -17,10 +17,9 @@
         <%= f.text_field :price, class: "form-control my-3" %>
       </div>
 
-
       <div class = "mt-4 d-flex justify-content-center align-items-center">
         <%= f.label :Category, class: "me-2" %>
-        <%= f.select :category_ids, options_for_select(@categories.map { |category, value| [category.name, category.id] }, category.id) %>
+        <%= f.select :category_ids, options_for_select( @categories.map { |category, value| [category.name, category.id] }, @product.categories ), { multiple: true, class: 'form-control form-select-multiple' }  %>
       </div>
 
       <div class = "form-group m-3">
