--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -30,6 +30,17 @@
           </ul>
         </div>
       <% else %>
+        <% if current_user.owner? %>
+          <div class="dropdown me-2">
+            <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Owner Controls
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark  ">
+              <li class = "dropdown-item"><%= link_to 'Manage Product', products_path, class: "text-decoration-none text-light" %></li>
+              <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
+            </ul>
+          </div>
+        <% end %>
         <div class = "dropdown">
           <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Profile
