--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,38 +9,84 @@
 					<tr>
 						<th class = "p-3" >Category Name</th>
 						<th class = "p-3" >Description</th>
-						<th class = "p-3" >Main Category</th>
 						<th class = "p-3" colspan = "3">Actions</th>
 					</tr>
 				</thead>
 				<tbody class = "table-light text-center" >
-					<% @categories.each do |category|%>
-						<tr>
-							<td class = "p-3" ><%= category.name %></td>
-							<td class = "p-3"><%= category.description %></td>
-							<td class = "p-3">
-								<%= link_to category_path(category), class: "icon-link icon-link-hover btn btn-outline-dark", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do%>
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
-										<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
-										<path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
-									</svg>
-								<% end %>
-							</td>
-							<td class = "p-3">
-								<%= link_to edit_category_path(category), class: "icon-link icon-link-hover btn btn-outline-info", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do %>
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-										<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
-									</svg>
-								<% end %> 
-							</td>
-							<td class = "p-3">
-								<%= link_to category_path(category), class: "icon-link icon-link-hover btn btn-outline-danger", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);", data: {turbo_method: :delete, turbo_confirm: "Are you confirm to delete"} do %>
-									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
-										<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
-									</svg>
-								<% end %>  
-							</td>
-						</tr>
+					<% @categories.each_with_index do |category,i|%>
+						<% if category.parent_id == nil %>
+							<tr>
+								<td>
+									<div class="accordion" id="accordionExample">
+										<div class="accordion-item">
+											<h2 class="accordion-header" id="headingOne">
+												<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="true" aria-controls="collapseOne">
+													<%= category.name %>
+												</button>
+											</h2>
+											<div id="collapse<%= i %>" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+												<div class="accordion-body">
+													<% category.sub_categories.each do |sub_category| %>
+														<table class="table">
+															<tbody>
+																<tr>
+																	<td><%= sub_category.name %></td>
+																	<td><%= sub_category.description %></td>
+																	<td class = "p-3">
+																	<%= link_to category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0); color: black" do%>
+																		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+																			<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
+																			<path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
+																		</svg>
+																	<% end %>
+																</td>
+																<td class = "p-3">
+																	<%= link_to edit_category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do %>
+																		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+																			<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+																		</svg>
+																	<% end %> 
+																</td>
+																<td class = "p-3">
+																	<%= link_to category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0); color: red", data: {turbo_method: :delete, turbo_confirm: "Are you confirm to delete"} do %>
+																		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+																			<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
+																		</svg>
+																	<% end %>  
+																</td>
+																</tr>
+															</tbody>
+														</table>
+													<% end %>
+												</div>
+										</div>
+									</div>
+								</td>
+								<td class = "p-3"><%= category.description %></td>
+								<td class = "p-3">
+									<%= link_to category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0); color: black;" do%>
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+											<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
+											<path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
+										</svg>
+									<% end %>
+								</td>
+								<td class = "p-3">
+									<%= link_to edit_category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0);" do %>
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+											<path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+										</svg>
+									<% end %> 
+								</td>
+								<td class = "p-3">
+									<%= link_to category_path(category), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0); color: red", data: {turbo_method: :delete, turbo_confirm: "Are you confirm to delete"} do %>
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+											<path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"/>
+										</svg>
+									<% end %>  
+								</td>
+							</tr>
+						<% end %>
 					<% end%>
 				</tbody>
 			</table>
