--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -19,7 +19,7 @@
 
       <div class = "mt-4 d-flex justify-content-center align-items-center">
         <%= f.label :Category, class: "me-2" %>
-        <%= f.select :category_ids, options_for_select( @categories.map { |category, value| [category.name, category.id] }, @product.categories ), { multiple: true, class: 'form-control form-select-multiple' }  %>
+        <%= f.select :category_ids, options_for_select( @categories.map { |category, value| [category.name, category.id] }, @product.category_ids ), { multiple: true, class: 'form-control form-select-multiple' }, size: "2"  %>
       </div>
 
       <div class = "form-group m-3">
