--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,6 +3,12 @@
     <%= link_to 'StoreHub', root_path, class: "ms-3 mb-0 h1 text-decoration-none" %> 
   </div>
   <div class = "d-flex justify-content-evenly" style = "margin-right: 60px;">
+      <div class = "me-3">
+        <%= form_tag menu_path, method: "get" do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Product" %>
+          <%= submit_tag("Search", name: nil,  class: "btn btn-secondary") %>
+        <% end %>
+      </div>
     <% if user_signed_in? %>
       <span class = "mt-2 me-3">Hello <%= current_user.first_name %></span>
       <% if current_user.admin? %>
