--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,12 +19,12 @@
 								<td>
 									<div class="accordion" id="accordionExample">
 										<div class="accordion-item">
-											<h2 class="accordion-header" id="headingOne">
+											<h2 class="accordion-header" id="heading<%= i %>">
 												<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="true" aria-controls="collapseOne">
 													<%= category.name %>
 												</button>
 											</h2>
-											<div id="collapse<%= i %>" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+											<div id="collapse<%= i %>" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 												<div class="accordion-body">
 													<% category.sub_categories.each do |sub_category| %>
 														<table class="table">
