--- a/app/views/product_stocks/new.html.erb
+++ b/app/views/product_stocks/new.html.erb
@@ -1,16 +1,24 @@
-<%= form_for ProductStock.new, url: product_product_stocks_path  do |f| %>
-	<div class = "mt-4 d-flex justify-content-center align-items-center">
-		<%= f.label :transaction_type, class: "me-2" %>
-		<%= f.select :transaction_type, ProductStock.transaction_types.map {|transaction_type, value| [transaction_type.to_s.humanize, transaction_type.to_s]} %>
+<div class = "container d-flex justify-content-center align-items-center", style = "margin-top: 150px; " >
+	<div class = "row d-flex justify-content-center align-items-center border rounder-5 p-5 bg-white shadow  box-area inside_container">
+		<p class="h2 text-center">Inventory Management</p>
+		
+		<%= form_for ProductStock.new, url: product_product_stocks_path  do |f| %>
+			<div class = "mt-4 d-flex justify-content-center align-items-center">
+				<%= f.label :transaction_type, class: "me-2" %>
+				<%= f.select :transaction_type, ProductStock.transaction_types.map {|transaction_type, value| [transaction_type.to_s.humanize, transaction_type.to_s]} %>
+			</div>
+		
+			<div class = "form-group m-3">
+				<%= f.label :quantity %>
+				<%= f.text_field :quantity ,class: "form-control my-3" %>
+			</div>
+		
+			<div class = "ms-5 d-flex justify-content-center">
+				<%= f.submit 'Update Stocks', class: 'btn btn-primary mt-3 me-5 ' %>
+			</div> 
+		
+		<% end %>
+
 	</div>
 
-	<div class = "form-group m-3">
-		<%= f.label :quantity %>
-		<%= f.text_field :quantity ,class: "form-control my-3" %>
-	</div>
-
-	<div class = "ms-5 d-flex justify-content-center">
-		<%= f.submit 'Update Stocks', class: 'btn btn-primary mt-3 me-5 ' %>
-	</div> 
-
-<% end %>
+</div>
