--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag 'product' %>
+
+
 <div class = "container d-flex justify-content-center align-items-center flex-column", style = "margin-top: 120px;">
 	<div class = "d-flex justify-content-center align-items-center flex-column">
 
@@ -21,7 +24,7 @@
 						<tr>
 							<td class = "p-3" ><%= product.name %></td>
 							<td class = "p-3"><%= product.description %></td>
-              <td class = "p-3"><%= product.price %></td>
+              <td class = "p-3">₹<%= product.price %></td>
 							<td class = "p-3"><%= a.where(transaction_type: "in").pluck(:quantity).sum - 
 							a.where(transaction_type: "out").pluck(:quantity).sum    %></td>
 							<td class = "p-3">
@@ -46,12 +49,12 @@
 									</svg>
 								<% end %>  
 							</td>
-							<td class = "p-3">
-								<%= link_to new_product_product_stock_path(product) do %>
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square-fill" viewBox="0 0 16 16">
-									<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm6.5 4.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3a.5.5 0 0 1 1 0"/>
-								</svg>
-								<% end %>  
+							<td class = "">
+								<%= link_to do %>
+									<button class = "btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= product.id %>", data-name = "<%= product.name %>" >
+										<i class="bi bi-plus-circle"></i>						
+									</button>
+								<% end %>
 							</td>
 						</tr>
 					<% end%>
@@ -59,4 +62,34 @@
 			</table>
 		</div>
 	</div>
+</div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Inventory Management</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+				<%= form_for ProductStock.new, url: product_stocks_path  do |f| %>
+					<div class = "mt-4 d-flex justify-content-center align-items-center">
+						<%= f.hidden_field :product_id %>
+						<%= f.label :transaction_type, class: "me-2" %>
+						<%= f.select :transaction_type, ProductStock.transaction_types.map {|transaction_type, value| [transaction_type.to_s.humanize, transaction_type.to_s]} %>
+					</div>
+				
+					<div class = "form-group m-3">
+						<%= f.label :quantity %>
+						<%= f.text_field :quantity ,class: "form-control my-3" %>
+					</div>
+				
+					<div class = "ms-5 d-flex justify-content-center">
+						<%= f.submit 'Update Stocks', class: 'btn btn-primary mt-3 me-5 ' %>
+					</div> 
+				<% end %>
+      </div>
+    </div>
+  </div>
 </div>
