--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,12 +3,16 @@
     <%= link_to 'StoreHub', root_path, class: "ms-3 mb-0 h1 text-decoration-none" %> 
   </div>
   <div class = "d-flex justify-content-evenly" style = "margin-right: 60px;">
-      <div class = "me-3">
-        <%= form_tag menu_path, method: "get" do %>
-          <%= text_field_tag :search, params[:search], placeholder: "Search Product" %>
-          <%= submit_tag("Search", name: nil,  class: "btn btn-secondary") %>
-        <% end %>
+    <nav class="navbar bg-body-tertiary ms-5" style = "margin-left: 80px;">
+      <div class="container-fluid">
+        <form class="d-flex" role="search">
+          <%= form_tag menu_path, method: "get" do %>
+            <%= text_field_tag :search, params[:search], placeholder: "Search Product", class: "form-control" %>
+            <%= submit_tag("Search", name: nil,  class: "btn btn-outline-success") %>
+          <% end %>
+        </form>
       </div>
+    </nav>
     <% if user_signed_in? %>
       <span class = "mt-2 me-3">Hello <%= current_user.first_name %></span>
       <% if current_user.admin? %>
@@ -20,6 +24,9 @@
             <li class = "dropdown-item"><%= link_to 'Home', root_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Users', users_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Role', roles_path, class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'Manage Product', products_path, class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'Manage Inventory', categories_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" }%> </li>
           </ul>
         </div>
@@ -44,6 +51,7 @@
             <ul class="dropdown-menu dropdown-menu-dark  ">
               <li class = "dropdown-item"><%= link_to 'Manage Product', products_path, class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
+              <li class = "dropdown-item"><%= link_to 'Manage Inventory', categories_path, class: "text-decoration-none text-light" %></li>
             </ul>
           </div>
         <% end %>
