--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar bg-body-tertiary d-flex justify-content>
-  <div class="container-fluid">
+<nav class="navbar bg-body-tertiary d-flex justify-content">
+  <div class = "d-flex">
     <%= link_to 'StoreHub', root_path, class: "ms-3 mb-0 h1 text-decoration-none" %> 
   </div>
   <div class = "d-flex justify-content-evenly" style = "margin-right: 60px;">
@@ -14,9 +14,9 @@
       </div>
     </nav>
     <% if user_signed_in? %>
-      <span class = "mt-2 me-3">Hello <%= current_user.first_name %></span>
+      <span class = "mt-3 me-3">Hello <%= current_user.first_name %></span>
       <% if current_user.admin? %>
-        <div class="dropdown me-2">
+        <div class="dropdown mt-2 me-2">
           <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Admin Controls
           </button>
@@ -24,42 +24,44 @@
             <li class = "dropdown-item"><%= link_to 'Home', root_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Users', users_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Role', roles_path, class: "text-decoration-none text-light" %></li>
-            <li class = "dropdown-item"><%= link_to 'Manage Product', products_path, class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'Manage Product', product_user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Manage Inventory', categories_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" }%> </li>
           </ul>
         </div>
 
-        <div class = "dropdown">
+        <div class = "dropdown mt-2">
           <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Profile
           </button>
           <ul class="dropdown-menu dropdown-menu-dark  ">
             <li class = "dropdown-item"><%= link_to 'Home', root_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Details', user_path(current_user), class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'My Cart', cart_user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Edit', edit_user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" }%> </li>
           </ul>
         </div>
       <% else %>
         <% if current_user.owner? %>
-          <div class="dropdown me-2">
+          <div class="dropdown mt-2 me-2">
             <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Owner Controls
             </button>
             <ul class="dropdown-menu dropdown-menu-dark  ">
-              <li class = "dropdown-item"><%= link_to 'Manage Product', products_path, class: "text-decoration-none text-light" %></li>
+              <li class = "dropdown-item"><%= link_to 'Manage Product', product_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Manage Inventory', categories_path, class: "text-decoration-none text-light" %></li>
             </ul>
           </div>
         <% end %>
-        <div class = "dropdown">
+        <div class = "dropdown mt-2">
           <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             My Profile
           </button>
           <ul class="dropdown-menu dropdown-menu-dark" >
+              <li class = "dropdown-item"><%= link_to 'My Cart', cart_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Edit', edit_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Details', user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete }%> </li>
@@ -69,8 +71,8 @@
       
     <% else %>
       <div class = "me-4">
-        <%= link_to 'Log In', new_user_session_path, class: "btn btn-secondary" %> 
-        <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-secondary" %>
+        <%= link_to 'Log In', new_user_session_path, class: "btn btn-secondary mt-2" %> 
+        <%= link_to 'Sign Up', new_user_registration_path, class: "btn btn-secondary mt-2" %>
       </div>
     <% end %>
   </div>
