--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,20 +1,43 @@
-<div class = "container d-flex justify-content-center align-items-center shadow p-3 mb-5 bg-body-tertiary rounded show_container flex-column", style = "margin-top: 120px;">
-  <p class="h1 text-center mb-5">Product Details</p>
+<div class = "b">
+  <p class="h1 text-center mt-5">Product Details</p>
+  <div class = "row shadow rounded" style = "margin: 70px 300px; padding: 180px;">
+    <div class = "col-md-6">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2500">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <%= image_tag(@product.images.first, style: "width: 20rem; height: 20rem;") %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag(@product.images.second, style: "width: 20rem; height: 20rem;") %>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag(@product.images.third, style: "width: 20rem; height: 20rem;") %>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 
-  <%= image_tag(@product.images.first) %>
+    <div class = "col-md-6">
+      <p class = "fw-bold fs-2"><%= @product.name%></p>
+      <p class = "fw-bold fs-4">₹<%= @product.price%></p>
+      <p class = "fw-light fs-5"><%= @product.description%></p>
 
-  <div class = "mb-5">
-    <span class = "text-center fw-medium fs-4">Product Name : </span> 
-    <span class = "fw-light fs-5"><%= @product.name%></span>
-  </div>
-  <div class = "mb-5">
-    <span class = "text-center fw-medium fs-4">Description : </span> 
-    <span class = "fw-light fs-5"><%= @product.description%></span>
-  </div>
+      <div class = "d-flex">
+        <%= form_with(url: cart_products_path) do |f| %>
+          <%= f.hidden_field :id, value: @product.id %>
+          <%= f.submit "Add to Cart", class: "btn btn-dark" %>
+        <% end %>
 
-  <div class = "mt-3 d-flex justify-content-center ms-2 ">
-    <%= link_to "Edit", edit_product_path(@product), class: "btn btn-secondary me-5"%>
-    <%= link_to "Back", roles_path , class: "btn btn-danger"%>
+        <%= link_to "Buy Now", root_path, class: "btn btn-success ms-3" %>
+      </div>
+    </div>
   </div>
 </div>
- 
