--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,7 +6,7 @@
     <nav class="navbar bg-body-tertiary ms-5" style = "margin-left: 80px;">
       <div class="container-fluid">
         <form class="d-flex" role="search">
-          <%= form_tag menu_path, method: "get" do %>
+          <%= form_tag products_path, method: "get" do %>
             <%= text_field_tag :search, params[:search], placeholder: "Search Product", class: "form-control" %>
             <%= submit_tag("Search", name: nil,  class: "btn btn-outline-success") %>
           <% end %>
@@ -39,6 +39,7 @@
             <li class = "dropdown-item"><%= link_to 'Home', root_path, class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Details', user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'My Cart', cart_user_path(current_user), class: "text-decoration-none text-light" %></li>
+            <li class = "dropdown-item"><%= link_to 'My Order', my_orders_user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Edit', edit_user_path(current_user), class: "text-decoration-none text-light" %></li>
             <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" }%> </li>
           </ul>
@@ -49,8 +50,9 @@
             <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Owner Controls
             </button>
-            <ul class="dropdown-menu dropdown-menu-dark  ">
+            <ul class="dropdown-menu dropdown-menu-dark">
               <li class = "dropdown-item"><%= link_to 'Manage Product', product_user_path(current_user), class: "text-decoration-none text-light" %></li>
+              <li class = "dropdown-item"><%= link_to 'Manage Orders', orders_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Manage Categories', categories_path, class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Manage Inventory', categories_path, class: "text-decoration-none text-light" %></li>
             </ul>
@@ -62,6 +64,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-dark" >
               <li class = "dropdown-item"><%= link_to 'My Cart', cart_user_path(current_user), class: "text-decoration-none text-light" %></li>
+              <li class = "dropdown-item"><%= link_to 'My Order', my_orders_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Edit', edit_user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Details', user_path(current_user), class: "text-decoration-none text-light" %></li>
               <li class = "dropdown-item"><%= link_to 'Log Out', destroy_user_session_path, class: "text-decoration-none text-light",  data: { turbo_method: :delete }%> </li>
