--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -1,139 +1,153 @@
 <%= javascript_include_tag 'address' %>
 
-<div class = "row">
-  <div class = "row px-5 pt-3">
-    <h3>Checkout</h3>
-  </div>
+<div class = "container">
 
-  <div class = "row">
-    <div class = "row col-md-8 p-5">
-      <%= form_with(url: create_order_path) do |f| %>
-        <div class="accordion" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Deliver To
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <% @addresses.each do |address| %>
-                  <div class = "row">
-                    <div class = "col-md-10 p-3">
-                      <div>
-                        <%= f.radio_button :address_id, address.id, checked: (address.default_address == true) %>
-                        <span class = "fw-medium"><%= address.recipient_name%>, </span>
-                        <span class = "fw-medium"><%= address.phone_number %></span>              
+  <div class = "row mt-5">
+    <div class = "row px-5 pt-3">
+      <h3>Checkout</h3>
+    </div>
+
+    <div class = "row grid gap-0 column-gap-4">
+      <div class = "row col-md-8 p-5 bg-white shadow">
+        <%= form_with(url: create_order_path) do |f| %>
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Deliver To
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <% @addresses.each do |address| %>
+                    <div class = "row">
+                      <div class = "col-md-10 p-3">
+                        <div>
+                          <%= f.radio_button :address_id, address.id, checked: (address.default_address == true) %>
+                          <span class = "fw-medium"><%= address.recipient_name%>, </span>
+                          <span class = "fw-medium"><%= address.phone_number %></span>              
+                        </div>
+
+                        <div>
+                          <p><%= address.street %>,
+                          <%= address.city %><br>
+                          <%= address.state %>,
+                          <%= address.zip_code %></p>
+                        </div>
+
                       </div>
 
-                      <div>
-                        <p><%= @addresses.first.street %>,
-                        <%= @addresses.first.city %><br>
-                        <%= @addresses.first.state %>,
-                        <%= @addresses.first.zip_code %></p>
+                      <div class = "col-md-2 p-3">
+                       
+                          <button class = "btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-id = "<%= address.id %>" 
+                          data-recipient_name = "<%= address.recipient_name %>"
+                          data-street = "<%= address.street %>"
+                          data-city = "<%= address.city %>"
+                          data-state = "<%= address.state %>"
+                          data-zip_code = "<%= address.zip_code %>"
+                          data-phone_number = "<%= address.phone_number %>"
+                          data-default_address = "<%= address.default_address %>"
+                           >
+                          <i class="bi bi-pencil"></i>		
+                          </button>
+                       
+
+                        <%= link_to address_path(address), data: {turbo_method: :delete, turbo_confirm: "Are you confirm to delete"} do %>
+                          <i class="bi bi-trash-fill"></i>	
+                        <% end %>
                       </div>
 
-                      <button class="collapsed btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Deliver Here
+                      <div class = "d-flex flex-row-reverse m-2">
+                        <button class="collapsed btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          Deliver Here
+                        </button>
+                      </div>
+
+                      <hr width = "100%;" color = "black" size="4">
+                    </div>
+
+                  <% end %>
+
+                
+                  <%= link_to  do %>
+                    <button class = "btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= current_user.id %>" >
+                    <i class="bi bi-house-add"></i>			
+                    </button>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Order Summary
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <% @cart_products.each do |cart_product| %>
+                    <div class = "row m-2">
+                      <div class = "col-md-3">
+                        <%= image_tag(Product.find_by(id: cart_product.product_id).images.first, style: "width: 10rem; height: 10rem;") %>
+                      </div>
+
+                      <div class = "d-flex col-md-3 justify-content-center align-items-center">
+                        <span><%= cart_product.product.name %></span>
+                      </div>
+                      <div class = "d-flex col-md-3 justify-content-center align-items-center">
+                        <span>x<%= cart_product.quantity %></span>
+                      </div>
+                      <div class = "d-flex col-md-3 justify-content-center align-items-center flex-column">
+                        <span>₹<%= cart_product.quantity * cart_product.product.price %></span>
+                      </div>
+                    </div>
+                    <div class = "d-flex flex-row-reverse">
+                      <button class="collapsed btn btn-primary ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Confirm
                       </button>
                     </div>
-
-                    <div class = "col-md-2 p-3">
-                      <%= link_to  do %>
-                        <button class = "btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= current_user.id %>" >
-                        <i class="bi bi-pencil"></i>		
-                        </button>
-                      <% end %>
-
-                      <%= link_to address_path(address), data: {turbo_method: :delete, turbo_confirm: "Are you confirm to delete"} do %>
-                        <i class="bi bi-trash-fill"></i>	
-                      <% end %>
-                    </div>
-
-                    <hr width = "100%;" color = "black" size="4">
-                  </div>
-
-                <% end %>
-
-              
-                <%= link_to  do %>
-                  <button class = "btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= current_user.id %>" >
-                  <i class="bi bi-house-add"></i>			
-                  </button>
-                <% end %>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Order Summary
-              </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <% @cart_products.each do |cart_product| %>
-                  <div class = "row m-2">
-                    <div class = "col-md-3">
-                      <%= image_tag(Product.find_by(id: cart_product.product_id).images.first, style: "width: 10rem; height: 10rem;") %>
-                    </div>
-
-                    <div class = "d-flex col-md-9 justify-content-between align-items-center">
-                      <span><%= cart_product.product.name %></span>
-                      <span>x<%= cart_product.quantity %></span>
-                      <span>₹<%= cart_product.quantity * cart_product.product.price %></span>
-                    </div>
-                  </div>
-                <% end %>
-
-                <div>
-                  <button class="collapsed btn btn-primary ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Confirm
-                  </button>
+                  <% end %>
                 </div>
-                
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Payment
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <%= f.submit "Pay Now", class: "btn btn-success mt-3" %>
+                </div>
               </div>
             </div>
           </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Payment
-              </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                <%= f.submit "Pay Now", class: "btn btn-success mt-3" %>
-              </div>
-            </div>
-          </div>
+        <% end %>
+      </div>
+    
+
+    <div class = "col-md-4 p-5 bg-white shadow grid gap-0 column-gap-3">
+      <h6 class = "text-secondary">PRICE DETAILS</h6>
+      <hr width = "100%;" color = "black" size="4">
+      <% @cart_products.each do |cart_product| %>
+        <div class = "d-flex justify-content-between ">
+          <span class = "fw-bold"><%= cart_product.product.name %></span>
+          <span>₹<%= cart_product.product.price * cart_product.quantity %></span>
         </div>
       <% end %>
-    </div>
-  
-
-  <div class = "col-md-4 p-5">
-    <h6 class = "text-secondary">PRICE DETAILS</h6>
-    <hr width = "100%;" color = "black" size="4">
-    <% @cart_products.each do |cart_product| %>
-      <div class = "d-flex justify-content-between ">
-        <span class = "fw-bold"><%= cart_product.product.name %></span>
-        <span>₹<%= cart_product.product.price * cart_product.quantity %></span>
-      </div>
-    <% end %>
-    <hr width = "100%;" color = "black" size="4">
-    <div class = "d-flex justify-content-between  flex-column">
-      <div class = "d-flex justify-content-between"> 
-        <span class = "fw-bold">Total Amount: </span>
-        ₹<%= @total %>
+      <hr width = "100%;" color = "black" size="4">
+      <div class = "d-flex justify-content-between  flex-column">
+        <div class = "d-flex justify-content-between"> 
+          <span class = "fw-bold">Total Amount: </span>
+          ₹<%= @total %>
+        </div>
       </div>
     </div>
-    <%= link_to "Order Now", create_order_path, data: { turbo_method: :post }, class: "btn btn-info ms-5 mt-3" %>
   </div>
+
 </div>
-
-
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
@@ -145,9 +159,11 @@
       <div class="modal-body">
 				<%= form_for Address.new, url: addresses_path  do |f| %>
 
+          <%= f.hidden_field :id %>
+
           <div class = "form-group m-3">
             <%= f.label :recipient_name %>
-            <%= f.text_field :recipient_name ,class: "form-control my-3" %>
+            <%= f.text_field :recipient_name ,class: "form-control my-3", placeholder: "Recipient Name  " %>
           </div>
 				
 					<div class = "form-group m-3">
@@ -176,8 +192,8 @@
           </div>
 
           <div class = "form-group m-3">
-            <%= f.check_box :default_address, value: true %>
-             <%= f.label :make_this_address_default, class: "text-secondary" %>
+            <%= f.check_box :default_address, {}, true, false %>
+            <%= f.label :make_this_address_default, class: "text-secondary" %>
           </div>
 				
 					<div class = "d-flex justify-content-center">
@@ -188,4 +204,3 @@
     </div>
   </div>
 </div>
-
