--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -9,7 +9,7 @@
 
     <div class = "row grid gap-0 column-gap-4">
       <div class = "row col-md-8 p-5 bg-white shadow">
-        <%= form_with(url: create_order_path, id: "checkoutForm") do |f| %>
+        <%= form_for Order.new do |f| %>
           <div class="accordion" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header">
@@ -209,30 +209,33 @@
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
-  var options = {
-      "key": "rzp_test_sMAArAlcP3cfDm", 
-      "amount": "<%= @total*100 %>", 
-      "currency": "INR",
-      "name": "StoreHub",
-      "description": "Test Transaction",
-      "image": "https://example.com/your_logo",
-      "order_id": "<%= @order.id %>", 
-      "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
-      "prefill": {
-          "name": "<%= current_user.first_name %> +  <%= current_user.last_name %>",
-          "email": "<%= current_user.email %>",
-          "contact": "6372869231"
-      }, 
-      "notes": {
-          "address": "Razorpay Corporate Office"
-      },
-      "theme": {
-          "color": "#3399cc"
-      }
-  };
-  var rzp1 = new Razorpay(options);
   document.getElementById('rzp-button1').onclick = function(e){
-      rzp1.open();
-      e.preventDefault();
+    e.preventDefault();
+    var options = {
+        "key": "rzp_test_sMAArAlcP3cfDm", 
+        "amount": "<%= @total*100 %>", 
+        "currency": "INR",
+        "name": "StoreHub",
+        "description": "Test Transaction",
+        "image": "https://example.com/your_logo",
+        "order_id": "<%= @order.id %>", 
+        "callback_url": `/order_items/${document.querySelector('input[name="order[address_id]"]:checked').value
+        }`,
+        "prefill": {
+            "name": "<%= current_user.first_name %> +  <%= current_user.last_name %>",
+            "email": "<%= current_user.email %>",
+            "contact": "6372869231"
+        }, 
+        "notes": {
+            "address": "Razorpay Corporate Office"
+        },
+        "theme": {
+            "color": "#3399cc"
+        }
+    };
+    var rzp1 = new Razorpay(options);
+  
+    rzp1.open();
+    
   }
 </script>
