--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -31,7 +31,7 @@
 				<div class="accordion" id="accordionExample">
 					<div class="accordion-item">
 						<h2 class="accordion-header d-flex justify-content-between align-items-center">
-							<%= link_to category.name, product_category_path(category), class: "text-decoration-none fs-6 ps-4" %>
+							<%= link_to category.name, products_path(category_id: category.id), class: "text-decoration-none fs-6 ps-4" %>
 							<button class="accordion-button w-25 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="false" aria-controls="collapse<%= i %>">
 							</button>	
 						</h2>
@@ -42,7 +42,7 @@
 
 										<div class="accordion-item">
 											<h2 class="accordion-header d-flex justify-content-between align-items-center">
-												<%= link_to sub_category.name, product_category_path(category), class: "fs-6 text-decoration-none fs-5 ps-4" %>
+												<%= link_to sub_category.name, products_path(category_id: sub_category.id), class: "fs-6 text-decoration-none fs-5 ps-4" %>
 												<button class="accordion-button w-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= i %>" aria-expanded="false" aria-controls="collapse<%= i %>">
 												</button>
 											</h2>
