--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -20,13 +20,11 @@
 				</thead>
 				<tbody class = "table-light text-center" >
 					<% @all_products.each do |product|%>
-						<% a = product.product_stocks %>
 						<tr>
 							<td class = "p-3" ><%= product.name %></td>
 							<td class = "p-3"><%= product.description %></td>
               <td class = "p-3">₹<%= product.price %></td>
-							<td class = "p-3"><%= a.where(transaction_type: "in").pluck(:quantity).sum - 
-							a.where(transaction_type: "out").pluck(:quantity).sum    %></td>
+							<td class = "p-3"><%= product.check_product_stock %></td>
 							<td class = "p-3"><%= product.user.first_name %></td>
 							<td class = "p-3">
 								<%= link_to product_path(product), class: "icon-link icon-link-hover", style: "--bs-icon-link-transform: translate3d(0, -.125rem, 0); color: black;" do%>
@@ -51,11 +49,9 @@
 								<% end %>  
 							</td>
 							<td class = "">
-								<%= link_to do %>
-									<button class = "btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= product.id %>", data-name = "<%= product.name %>" >
-										<i class="bi bi-plus-circle"></i>						
-									</button>
-								<% end %>
+								<button class = "btn" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal", data-id = "<%= product.id %>", data-name = "<%= product.name %>" >
+									<i class="bi bi-plus-circle"></i>						
+								</button>
 							</td>
 						</tr>
 					<% end%>
